[package]
name = "sdp-catcher"
version = "1.0.0"
description = "A Tauri App"
authors = ["Allan Le Guyader"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sdp_catcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
netdev = "0.30.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
pnet = "0.35.0"
pnet_datalink = "0.35.0"
pnet_packet = "0.35.0"
socket2 = "0.5.5"
tauri-plugin-window-state = "2"

